--- a/resources/build_dmrpp/web.xml
+++ b/resources/build_dmrpp/web.xml
@@ -167,6 +167,28 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- filter>
+        <filter-name>UrlRewriteFilter</filter-name>
+        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+        <init-param>
+            <param-name>logLevel</param-name>
+            <param-value>sysout:DEBUG</param-value>
+        </init-param>
+        <init-param>
+            <param-name>RewriteLog</param-name>
+            <param-value>slf4j</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>UrlRewriteFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping -->
+
 
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
         Catalog Response Cache Updater (worker thread)
@@ -204,29 +226,10 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-
-    <filter>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-        <init-param>
-            <param-name>logLevel</param-name>
-            <param-value>sysout:DEBUG</param-value>
-        </init-param>
-        <init-param>
-            <param-name>RewriteLog</param-name>
-            <param-value>slf4j</param-value>
-        </init-param>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
-
+    <servlet-mapping>
+        <servlet-name>docs_servlet</servlet-name>
+        <url-pattern>/docs/*</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>build_dmrpp</servlet-name>
@@ -234,10 +237,6 @@
     </servlet-mapping>
 
 
-    <servlet-mapping>
-        <servlet-name>docs_servlet</servlet-name>
-        <url-pattern>/docs/*</url-pattern>
-    </servlet-mapping>
 
 
     <!-- ==================== Default Session Configuration ================= -->
