--- a/.travis.yml
+++ b/.travis.yml
@@ -92,6 +92,13 @@ cache:
 jobs:
   include:
 
+    - stage: disabled
+      name: "jdk8"
+      jdk: openjdk8
+      script:
+        - export STAGE=build
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
+
     - stage: build
       name: "jdk11"
       jdk: openjdk11
@@ -99,8 +106,8 @@ jobs:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
-    - stage: disabled
-      name: "gradle build (jdk11)"
+    - stage: build
+      name: "gradle (jdk11)"
       jdk: openjdk11
       script:
         - export STAGE=build
@@ -110,22 +117,54 @@ jobs:
 
 
     - stage: disabled
-      name: "synk scan(jdk11)"
+      name: "jdk7"
+      jdk: openjdk7
+      script:
+        - export STAGE=test
+        - ant show check
+
+    - stage: disabled
+      name: "jdk8"
+      jdk: openjdk8
+      script:
+        - export STAGE=test
+        - ant show check
+
+    - stage: disabled
+      name: "jdk11"
+      jdk: openjdk11
+      script:
+        - export STAGE=test
+        - ant show check
+
+    - stage: disabled
+      name: "sonarscan (jdk11)"
+      jdk: openjdk11
+      addons: sonarcloud
+      script:
+        - export STAGE=scan
+        - export ANT_OPTS="-Xms256m -Xmx8g"
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
+        - travis_wait 45 ant -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=2700 -Dsonar.qualitygate.wait=true show sonar
+        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
+
+    - stage: scan
+      name: "synk (jdk11)"
       jdk: openjdk11
       script:
         - export STAGE=scan
         - echo $STAGE
         - ./run-snyk.sh
 
-    - stage: disabled
-      name: "gradle sonarscan scan(jdk11)"
+    - stage: scan
+      name: "gradle sonarscan (jdk11)"
       jdk: openjdk11
       script:
         - export STAGE=scan
         - travis_wait 30 ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=1800 -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
-    - stage: disabled
+    - stage: snappah
       name: "olfs-snapshot (jdk11)"
       jdk: openjdk11
       script:
@@ -140,7 +179,7 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
-    - stage: disabled
+    - stage: snappah
       name: "olfs-build-number (jdk11)"
       jdk: openjdk11
       script:
@@ -155,7 +194,7 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
-    - stage: disabled
+    - stage: snappah
       name: "ngap-snapshot (jdk11)"
       jdk: openjdk11
       script:
@@ -170,7 +209,7 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
-    - stage: disabled
+    - stage: snappah
       name: "ngap-build-number (jdk11)"
       jdk: openjdk11
       script:
