--- a/.travis.yml
+++ b/.travis.yml
@@ -99,15 +99,15 @@ jobs:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
-    - stage: build
-      name: "jdk11"
+    - stage: disabled
+      name: "ant build (jdk11)"
       jdk: openjdk11
       script:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
-    - stage: build
-      name: "gradle (jdk11)"
+    - stage: disabled
+      name: "gradle build (jdk11)"
       jdk: openjdk11
       script:
         - export STAGE=build
@@ -148,7 +148,7 @@ jobs:
         - travis_wait 45 ant -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=2700 -Dsonar.qualitygate.wait=true show sonar
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
-    - stage: scan
+    - stage: disabled
       name: "synk (jdk11)"
       jdk: openjdk11
       script:
@@ -156,7 +156,7 @@ jobs:
         - echo $STAGE
         - ./run-snyk.sh
 
-    - stage: scan
+    - stage: disabled
       name: "gradle sonarscan (jdk11)"
       jdk: openjdk11
       script:
@@ -224,7 +224,7 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
-    - stage: snappah
+    - stage: build
       name: "build_dmrpp-snapshot (jdk11)"
       jdk: openjdk11
       script:
@@ -239,7 +239,7 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
 
-    - stage: snappah
+    - stage: build
       name: "build_dmrpp-build-number (jdk11)"
       jdk: openjdk11
       script:
