--- a/.travis.yml
+++ b/.travis.yml
@@ -115,6 +115,7 @@ jobs:
         - ./gradlew tasks
         - ./gradlew war
 
+
     - stage: disabled
       name: "jdk7"
       jdk: openjdk7
@@ -246,12 +247,13 @@ jobs:
         - echo "STAGE is ${STAGE}"
         - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
         - source ./travis/compute_build_tags.sh
-        - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DMKDMRPP_DIST_BASE="build_dmrpp-${OLFS_BUILD_VERSION}" mkdmrpp-dist
+        - ant -DHYRAX_VERSION="${HYRAX_BUILD_VERSION}" -DOLFS_VERSION="${OLFS_BUILD_VERSION}" -DMKDMRPP_DIST_BASE="build_dmrpp-${BUILD_DMRPP_VERSION}" mkdmrpp-dist
         - echo "Build DMR++ Bundles:"
         - ls -l ./build/dist/*.tgz
         - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
         - ls -l ${TRAVIS_BUILD_DIR}/package/
+
 
       # The hyrax-docker-trigger stage grabs the hyrax-docker project, sets the current
       # snapshot time and pushes the result to GitHub. This push triggers TravisCI
@@ -282,7 +284,7 @@ jobs:
 
 
 
-# The deploy section copies the snapshot build product our S3 bucket
+# The "deploy" section copies the snapshot build product to our S3 bucket
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
