--- a/.travis.yml
+++ b/.travis.yml
@@ -102,8 +102,10 @@ jobs:
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
-      name: "jdk11"
-      jdk: openjdk11
+      # name: "jdk11"
+      # jdk: openjdk11
+      name: "jdk17"
+      jdk: openjdk16
       script:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
