--- a/.travis.yml
+++ b/.travis.yml
@@ -102,16 +102,16 @@ jobs:
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
-      # name: "jdk11"
+      # name: "jdk11" jhrg 1/18/24
       # jdk: openjdk11
       name: "jdk17"
-      jdk: openjdk16
+      jdk: openjdk17
       script:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
-    - stage: build
-      # name: "gradle (jdk11)"
+    - stage: disabled # jhrg 1/18/24
+      # name: "gradle (jdk11)" jhrg 1/18/24
       # jdk: openjdk11
       name: "gradle (jdk17)"
       jdk: openjdk17
@@ -144,7 +144,7 @@ jobs:
         - ant show check
 
     - stage: scan
-      # name: "sonarscan (jdk11)"
+      # name: "sonarscan (jdk11)" jhrg 1/18/24
       # jdk: openjdk11
       name: "sonarscan (jdk17)"
       jdk: openjdk17
@@ -164,7 +164,7 @@ jobs:
         - echo $STAGE
         - ./run-snyk.sh
 
-    - stage: scan
+    - stage: disabled # jhrg 1/18/24
       # jhrg 1/18/24
       # name: "gradle sonarscan (jdk11)"
       # jdk: openjdk11
